--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1678,7 +1678,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #a24e58;
+  background: #454030;
 }
 .links-of-blogroll {
   font-size: 13px;
