--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1678,11 +1678,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-<<<<<<< HEAD
-  background: #e9fc01;
-=======
-  background: #d5ffa3;
->>>>>>> 0bf9f31205ee3e294a0c3f162c3c470689db022a
+  background: #0dff05;
 }
 .links-of-blogroll {
   font-size: 13px;
