--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1830,7 +1830,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #3086fe;
+  background: #ffcdf9;
 }
 .links-of-blogroll {
   font-size: 13px;
