--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1830,7 +1830,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #7f1bd1;
+  background: #34986e;
 }
 .links-of-blogroll {
   font-size: 13px;
