--- a/themes/indigo/layout/layout.ejs
+++ b/themes/indigo/layout/layout.ejs
@@ -8,6 +8,7 @@
         <%- body %>
         <%- partial('_partial/footer') %>
     </main>
+    <canvas id="canvas_bg" style="display: block;position: absolute; top: 0;left:0;"></canvas>
     <%- partial('_partial/after-footer') %>
     <%- partial('_partial/script') %>
 </body>
